--- a/app/src/main/res/layout/activity_demo_bible_utils.xml
+++ b/app/src/main/res/layout/activity_demo_bible_utils.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context=".DemoBibleUtilsActivity">
+
+    <TextView
+            android:id="@+id/lbl_verse"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"/>
 
     <com.example.brianherbert.biblenavwatch.ui.BibleNavSmall
             android:id="@+id/bible_nav"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
-</FrameLayout>
+</LinearLayout>
