--- a/app/src/main/res/layout/activity_demo_bible_utils.xml
+++ b/app/src/main/res/layout/activity_demo_bible_utils.xml
@@ -9,7 +9,7 @@
 
     <ScrollView
             android:layout_width="fill_parent"
-            android:layout_height="100dp"
+            android:layout_height="200dp"
             android:scrollbars="vertical"
             android:fillViewport="true">
 
@@ -19,6 +19,26 @@
                 android:layout_height="match_parent"
                 tools:text="testing"/>
     </ScrollView>
+
+    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
+        <Button
+                android:id="@+id/btn_prev"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:text="PREV" />
+
+        <View
+                android:layout_weight="1"
+                android:layout_width="1dp"
+                android:layout_height="10dp"
+        />
+
+        <Button
+                android:id="@+id/btn_next"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:text="NEXT" />
+    </LinearLayout>
 
     <com.example.brianherbert.biblenavwatch.ui.BibleNavSmall
             android:id="@+id/bible_nav"
