--- a/app/src/main/res/layout/activity_demo_bible_utils.xml
+++ b/app/src/main/res/layout/activity_demo_bible_utils.xml
@@ -34,6 +34,18 @@
         />
 
         <Button
+                android:id="@+id/btn_audio"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:text="AUDIO" />
+
+        <View
+                android:layout_weight="1"
+                android:layout_width="1dp"
+                android:layout_height="10dp"
+        />
+
+        <Button
                 android:id="@+id/btn_next"
                 android:layout_width="80dp"
                 android:layout_height="wrap_content"
